fix: all pages panel z-index

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -247,7 +247,6 @@ $block: '.#{variables.$ns}aside-header';
 
     &__content {
         width: calc(100% - var(--gn-aside-header-size));
-        z-index: var(--gn-aside-header-content-z-index, 95);
         margin-top: var(--gn-top-alert-height, 0);
 
         &_expanded-by-hover {
